# legislation-scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
logs/1837/Decreto/Não Informado/: Decreto_nº_56,_de_11_de_Setembro_de_1837_decreto-56-11-setembro-1837-561750-norma-pl.json
logs/1843/Decreto/Não Informado/: Decreto_nº_323,_de_23_de_Setembro_de_1843_decreto-323-23-setembro-1843-560919-norma-pe.json
logs/1858/Decreto/Não Informado/: Decreto_nº_2.074,_de_13_de_Janeiro_de_1858_decreto-2074-13-janeiro-1858-556726-norma-pe.json
logs/1884/Lei/Não consta revogação expressa/: Lei_nº_3.229,_de_3_de_Setembro_de_1884_lei-3229-3-setembro-1884-547013-norma-pl.json
logs/1897/Lei+Ordinária/Não consta revogação expressa/: Lei_nº_433,_de_12_de_Junho_de_1897_lei-433-12-junho-1897-539490-norma-pl.json
logs/1913/Decreto/Não consta revogação expressa/: Decreto_nº_2.781,_de_8_de_Maio_de_1913_decreto-2781-8-maio-1913-579004-norma-pl.json  (+1 more)
src/database/: saver.py
src/datasets/: build_dataset.py
src/extensions/vee_vpn/: veevpn_3_4_3_0.crx
src/scraper/: scrape.py
src/scraper/base/: scraper.py
src/scraper/conama/: scrape.py
src/scraper/federal_legislation/: scrape.py
src/scraper/icmbio/: scrape.py
src/scraper/state_legislation/: __init__.py  acre.py  alagoas.py  amapa.py  amazonas.py  bahia.py  ceara.py  distrito_federal.py  espirito_santo.py  goias.py  maranhao.py  mato_grosso.py  mato_grosso_do_sul.py  minas_gerais.py  para.py  paraiba.py  parana.py  rio_de_janeiro.py  rio_grande_do_norte.py  rio_grande_do_sul.py  sao_paulo.py
src/utils/: openvpn.py
(+124 files in other folders)
