[project]
name = "legislation-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "markitdown>=0.0.1a3",
    "pip>=24.3.1",
    "pymupdf>=1.25.2",
    "python-dotenv>=1.0.1",
    "selenium>=4.29.0",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]
